# flightbooking

./: .env.example  .pre-commit-config.yaml  Dockerfile  compose.yaml  main.py  pyproject.toml
crud/: database.py  users.py
models/: users.py
routers/: users.py
schemas/: users.py
tests/: test_bookings.py
utils/: email.py
